--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -6,6 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:replace="${title}">博客详情</title>
+  <!-- 标签页logo -->
+  <link rel="shortcut icon" href="../static/blog/default/favicon.ico" th:href="@{/blog/default/favicon.ico}"/>
+
   <link rel="stylesheet" href="../static/css/semantic.min.css" th:href="@{/css/semantic.min.css}">
   <link rel="stylesheet" href="../static/css/typo.css" th:href="@{/css/typo.css}">
   <link rel="stylesheet" href="../static/css/animate.css" th:href="@{/css/animate.css}">
@@ -13,7 +16,7 @@
   <link rel="stylesheet" href="../static/lib/tocbot/tocbot.css" th:href="@{/lib/tocbot/tocbot.css}">
   <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.css}">
   <link rel="stylesheet" href="../static/css/jquery.emoji.css" th:href="@{/css/jquery.emoji.css}">
-  <link rel="stylesheet" src="../../static/css/fontawesome.min.css" th:href="@{/css/fontawesome.min.css}">
+  <link rel="stylesheet" href="../static/css/fontawesome.min.css" th:href="@{/css/fontawesome.min.css}">
   <link rel="stylesheet" href="../static/css/APlayer.min.css" th:href="@{/css/APlayer.min.css}">
 
   <!--百度统计-->
@@ -27,14 +30,13 @@
     })();
   </script>
 </head>
+
 <body>
-
-
 <!--导航-->
 <nav th:fragment="menu(n)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
   <div class="ui container">
     <div class="ui inverted secondary stackable menu">
-      <h2 class="ui teal header item" title="个人博客">XSH_Blog</h2>
+      <h2 class="ui teal header item" title="个人博客" th:text="${configurations.get('websiteName')}">wulilinghan_Blog</h2>
       <a href="#" target="_blank" th:href="@{/}" class="m-item item m-mobile-hide " th:classappend="${n==1} ? 'active'"><i class="mini home icon"></i>&nbsp;首页</a>
       <a href="#" target="_blank" th:href="@{/types/-1}" class="m-item item m-mobile-hide" th:classappend="${n==2} ? 'active'"><i class="mini idea icon"></i>分类</a>
       <a href="#" target="_blank" th:href="@{/tags/-1}" class="m-item item m-mobile-hide" th:classappend="${n==3} ? 'active'"><i class="mini tags icon"></i>&nbsp;标签</a>
@@ -43,8 +45,8 @@
       <a href="#" target="_blank" th:href="@{/about}" class="m-item item m-mobile-hide" th:classappend="${n==6} ? 'active'"><i class="mini info icon"></i>关于我</a>
 <!--      <a href="http://music.xiongsihao.com" class="m-item item m-mobile-hide" th:classappend="${n==7} ? 'active'"><i class="mini music icon"></i>&nbsp;在线音乐</a>-->
 <!--      <a href="http://netdisk.xiongsihao.com" class="m-item item m-mobile-hide" th:classappend="${n==8} ? 'active'"><i class="mini save icon"></i>&nbsp;云盘</a>-->
-<!--      <a href="#" target="_blank" th:href="@{/admin}" class="m-item item m-mobile-hide" th:classappend="${n==7} ? 'active'"><i class="mini user secret icon"></i>后台管理</a>
-      <a href="#" target="_blank" th:href="@{/qq/oauth}" class="m-item item m-mobile-hide"><i class="mini qq icon"></i>QQ登录</a>-->
+<!--      <a href="#" target="_blank" th:href="@{/admin}" class="m-item item m-mobile-hide" th:classappend="${n==7} ? 'active'"><i class="mini user secret icon"></i>后台管理</a>-->
+<!--      <a href="#" target="_blank" th:href="@{/qq/oauth}" class="m-item item m-mobile-hide"><i class="mini qq icon"></i>QQ登录</a>-->
 
       <div class="right m-item item m-mobile-hide ">
         <form name="search" action="#" th:action="@{/search}" method="post" target="_blank">
@@ -65,7 +67,7 @@
 
         <div class="ui dropdown item" th:classappend="${session.loginStatus}?'myShowStyle':'myHideStyle'">
           <div class="text">
-            <img class="ui avatar image" th:src="${session.avatar}">
+            <img class="ui avatar image" th:src="${session.avatar}" alt="" src=""/>
             <span th:text="${session.nickname}">Xiong_sh</span>
           </div>
           <i class="dropdown icon"></i>
@@ -79,18 +81,12 @@
           </div>
         </div>
       </div>
-
-
     </div>
-
   </div>
   <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
     <i class="sidebar icon"></i>
   </a>
-
 </nav>
-
-
 
 <!--底部footer-->
 <footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive">
@@ -103,15 +99,17 @@
     &lt;!&ndash;引入天气预报插件&ndash;&gt;
     &lt;!&ndash;https://cj.weather.com.cn/plugin/pc&ndash;&gt;
     <div id="weather-float-he"></div>
-  </div>-->
+  </div>
+-->
   <div id="weather-float-he"></div>
   <div class="ui center aligned container">
     <div class="ui inverted divided stackable grid">
       <div class="three wide column">
         <div class="ui inverted link list">
           <div class="item">
-            <!--<img src="../static/images/wechat.jpg" th:src="@{/images/wechat.jpg}"  class="ui rounded image" alt="" style="width: 110px">-->
-            <img src="http://cdn.xiongsihao.com/footer_image.jpeg" class="ui rounded image" alt="" style="width: 110px">
+<!--            <img src="../static/images/wechat.jpg" th:src="@{/images/wechat.jpg}"  class="ui rounded image" alt="" style="width: 110px">-->
+<!--            <img src="http://cdn.xiongsihao.com/footer_image.jpeg" class="ui rounded image" alt="" style="width: 110px">-->
+            <img src="../static/images/wechat.jpg" th:src="@{/images/wechat.jpg}"  class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
@@ -119,32 +117,32 @@
         <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
         <div id="newblog-container">
           <div class="ui inverted link list" th:fragment="newblogList">
-            <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item m-text-thin" th:each="blog : ${newblogs}" th:text="${blog.title}">用户故事（User Story）</a>
-            <!--/*-->
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-            <!--*/-->
+            <a href="#" th:href="@{/article/md/{id}(id=${blog.articleId})}" target="_blank" class="item m-text-thin" th:each="blog : ${newblogs}" th:text="${blog.title}">用户故事（User Story）</a>
           </div>
         </div>
       </div>
       <div class="three wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
         <div class="ui inverted link list">
-          <a href="#" class="item m-text-thin" th:text="#{email}">Email：1902325071@qq.com</a>
-          <a href="#" class="item m-text-thin" th:text="#{qq}">QQ：1902325071</a>
+          <p class="m-text-thin m-text-spaced m-opacity-tiny" >Email：<a href="#" class="item m-text-thin" th:text="${configurations.get('email')}">Email：1902325071@qq.com</a></p>
+          <p class="m-text-thin m-text-spaced m-opacity-tiny" >QQ：<a href="#" class="item m-text-thin" th:text="${configurations.get('qq')}">QQ：1902325071</a></p>
         </div>
       </div>
       <div class="seven wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-        <p class="m-text-thin m-text-spaced m-opacity-mini" th:text="#{websiteDescription}">这是我的个人博客、记录学习进度和关于编程、写作、思考相关的任何内容...</p>
+        <p class="m-text-thin m-text-spaced m-opacity-mini" th:text="${configurations.get('websiteDescription')}">这是我的个人博客、记录学习进度和关于编程、写作、思考相关的任何内容...</p>
       </div>
     </div>
     <div class="ui inverted section divider"></div>
-    <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2019 - <span th:text="${#dates.year(#dates.createNow())}">2023</span> &nbsp;JMB &nbsp; Designed by wulilinghan</p>
-    <p class="m-text-thin m-text-spaced m-opacity-tiny"><a href="http://icp.chinaz.com/info?q=xiongsihao.com">粤AAABBBBCCCC</a></p>
+    <p class="m-text-thin m-text-spaced m-opacity-tiny" >Copyright © 2019 - <span th:text="${#dates.year(#dates.createNow())}">2020</span>&nbsp;Java-Markdown-Blog&nbsp;Designed by wulilinghan</p>
+    <p class="m-text-thin m-text-spaced m-opacity-tiny" ><a href="http://icp.chinaz.com/info?q=xiongsihao.com">粤AAABBBBCCCC</a></p>
 
     <div style="width:300px;margin:0 auto; padding:1px 0; ">
-      <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36098102000147" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="../images/1.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#ff1c04;">粤公网安备 6666666666666666号</p></a>
+      <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36098102000147"
+         style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
+        <img src="../images/1.png" style="float:left;"/>
+        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#ff1c04;">粤公网安备 6666666666666666号</p>
+      </a>
     </div>
 
     <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
@@ -155,10 +153,10 @@
         now.setTime(now.getTime()+250);
         days = (now - grt ) / 1000 / 60 / 60 / 24; dnum = Math.floor(days);
         hours = (now - grt ) / 1000 / 60 / 60 - (24 * dnum); hnum = Math.floor(hours);
-        if(String(hnum).length ==1 ){hnum = "0" + hnum;} minutes = (now - grt ) / 1000 /60 - (24 * 60 * dnum) - (60 * hnum);
-        mnum = Math.floor(minutes); if(String(mnum).length ==1 ){mnum = "0" + mnum;}
+        if(String(hnum).length ===1 ){hnum = "0" + hnum;} minutes = (now - grt ) / 1000 /60 - (24 * 60 * dnum) - (60 * hnum);
+        mnum = Math.floor(minutes); if(String(mnum).length ===1 ){mnum = "0" + mnum;}
         seconds = (now - grt ) / 1000 - (24 * 60 * 60 * dnum) - (60 * 60 * hnum) - (60 * mnum);
-        snum = Math.round(seconds); if(String(snum).length ==1 ){snum = "0" + snum;}
+        snum = Math.round(seconds); if(String(snum).length ===1 ){snum = "0" + snum;}
         document.getElementById("timeDate").innerHTML = "本站已安全运行 "+dnum+" 天 ";
         document.getElementById("times").innerHTML = hnum + " 小时 " + mnum + " 分 " + snum + " 秒";
       }
@@ -174,7 +172,7 @@
   <div id="player" class="aplayer aplayer-withlist aplayer-fixed" data-id="3778678" data-server="netease" data-autoplay="true" data-type="playlist"  data-fixed="true" data-volume="0.6" data-listfolded="true" data-theme="#2D8CF0"></div>
   <script src="../static/js/APlayer.min.js" th:src="@{/js/APlayer.min.js}"></script>
   <script src="../static/js/Meting.min.js" th:src="@{/js/Meting.min.js}"></script>
-  <script src="../../static/js/jquery.js" th:src="@{/js/jquery.js}"></script>
+  <script src="../static/js/jquery.js" th:src="@{/js/jquery.js}"></script>
   <script src="../static/js/semantic.min.js" th:src="@{/js/semantic.min.js}"></script>
   <script src="../static/js/jquery.scrollTo.min.js" th:src="@{/js/jquery.scrollTo.min.js}"></script>
   <script src="../static/lib/prism/prism.js" th:src="@{/lib/prism/prism.js}"></script>
@@ -184,7 +182,10 @@
   <script src="../static/js/jquery.emoji.js" th:src="@{/js/jquery.emoji.js}"></script>
   <script src="../static/js/emoji.list.js" th:src="@{/js/emoji.list.js}"></script>
   <script>
-    $('#newblog-container').load(/*[[@{/footer/newblog}]]*/"/footer/newblog");
+    $('#newblog-container').load(
+            //[[@{/footer/newblog}]]
+     //"/footer/newblog"
+    );
   </script>
   <script>
     $('.ui.dropdown').dropdown({
@@ -252,11 +253,12 @@
       script5.type = 'text/javascript';
       script5.src = '\\js\\autoload.js';
 
-      $('body').append(script5);
-      $('body').append(script1);
-      //$('body').append(script4);
-      $('body').append(script2);
-      $('body').append(script3);
+      var $body = $('body');
+      // $body.append(script1);//雪花效果
+      // $body.append(script2);//弹出字幕
+      $body.append(script3);
+      //$body.append(script4);
+      // $body.append(script5);// live-2D （看板娘）
     }
   </script>
   <!--博客美化效果-->
