--- a/src/main/resources/templates/theme/default/index.html
+++ b/src/main/resources/templates/theme/default/index.html
@@ -87,7 +87,8 @@
 
                 <div class="five wide column">
                   <a href="#" th:href="@{/blog/{id}(id=${blog.articleId})}" target="_blank">
-                    <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.coverImage}}"  alt="" class="ui rounded image">
+<!--                    <img src="https://source.unsplash.com/random/1270x720" th:src="@{${blog.coverImage}}"  alt="" class="ui rounded image">-->
+                    <img src="https://source.unsplash.com/random/1270x720" alt="" class="ui rounded image">
                   </a>
                 </div>
 
