--- a/src/main/resources/templates/theme/default/_fragments.html
+++ b/src/main/resources/templates/theme/default/_fragments.html
@@ -108,7 +108,8 @@
         <div class="ui inverted link list">
           <div class="item">
 <!--            <img src="http://cdn.xiongsihao.com/footer_image.jpeg" class="ui rounded image" alt="" style="width: 110px">-->
-            <img src="../../../static/default/favicon.ico" th:src="@{/default/favicon.ico}" class="ui rounded image" alt="" style="width: 110px">
+<!--            <img src="../../../static/default/favicon.ico" th:src="@{/default/favicon.ico}" class="ui rounded image" alt="" style="width: 110px">-->
+            <img src="https://source.unsplash.com/random/400x400" th:src="@{/default/favicon.ico}" class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
