--- a/src/main/resources/templates/theme/default/message_board.html
+++ b/src/main/resources/templates/theme/default/message_board.html
@@ -6,34 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>留言板</title>
-    <link rel="stylesheet" href="../../../static/default/css/semantic.min.css" th:href="@{/css/semantic.min.css}">
-    <link rel="stylesheet" href="../../../static/default/css/me.css" th:href="@{/css/me.css}">
+    <link rel="stylesheet" href="../../../static/default/css/semantic.min.css" th:href="@{/default/css/semantic.min.css}">
+    <link rel="stylesheet" href="../../../static/default/css/me.css" th:href="@{/default/css/me.css}">
 </head>
 <body>
 
 <!--导航-->
 <nav th:replace="theme/default/_fragments :: menu(5)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
-    <div class="ui container">
-        <div class="ui inverted secondary stackable menu">
-            <h2 class="ui teal header item">Blog</h2>
-            <a href="#" class=" m-item item m-mobile-hide"><i class="mini home icon"></i>首页</a>
-            <a href="#" class="m-item item m-mobile-hide"><i class="mini idea icon"></i>分类</a>
-            <a href="#" class=" m-item item m-mobile-hide"><i class="mini tags icon"></i>标签</a>
-            <a href="#" class="active m-item item m-mobile-hide"><i class="mini clone icon"></i>归档</a>
-            <a href="#" class="m-item item m-mobile-hide"><i class="mini info icon"></i>关于我</a>
-            <div class="right m-item item m-mobile-hide">
-                <div class="ui icon inverted transparent input m-margin-tb-tiny">
-                    <input type="text" placeholder="Search....">
-                    <i class="search link icon"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-    <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
-        <i class="sidebar icon"></i>
-    </a>
 </nav>
-<link rel="stylesheet" href="../../../static/default/css/alert_window.css" th:href="@{/css/alert_window.css}"/>
+
+<link rel="stylesheet" href="../../../static/default/css/alert_window.css" th:href="@{/default/css/alert_window.css}"/>
+
 <!--中间内容-->
 <!--自定义弹窗-->
 <div class="widget widget1" id="window1" hidden="hidden">
@@ -221,46 +204,14 @@
 
 <br>
 <br>
+
 <!--底部footer-->
 <footer th:replace="theme/default/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
-    <div class="ui center aligned container">
-        <div class="ui inverted divided stackable grid">
-            <div class="three wide column">
-                <div class="ui inverted link list">
-                    <div class="item">
-                        <img src="../../../static/default/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
-                    </div>
-                </div>
-            </div>
-            <div class="three wide column">
-                <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
-                <div class="ui inverted link list">
-                    <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-                    <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-                    <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-                </div>
-            </div>
-            <div class="three wide column">
-                <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
-                <div class="ui inverted link list">
-                    <a href="#" class="item m-text-thin">Email：xsh2668028614@qq.com</a>
-                    <a href="#" class="item m-text-thin">QQ：2668028614</a>
-                </div>
-            </div>
-            <div class="seven wide column">
-                <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-                <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、记录学习进度和关于编程、写作、思考相关的任何内容...</p>
-            </div>
-        </div>
-        <div class="ui inverted section divider"></div>
-        <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017 Xiong_sh Designed by Xiong_sh</p>
-    </div>
-
 </footer>
-<!--/*/<th:block th:replace="_fragments :: script">/*/-->
-<script src="../../static/js/jquery.js" th:src="@{/default/js/jquery.js}"></script>
+
+<script src="../../../static/default/js/jquery.js" th:src="@{/default/js/jquery.js}"></script>
 <script src="../../../static/default/js/semantic.min.js" th:src="@{/default/js/semantic.min.js}"></script>
-<!--/*/</th:block>/*/-->
+
 <script th:inline="javascript">
     onload = function () {
         $("#commentEditor").emoji({
@@ -337,7 +288,6 @@
             return;
         }
     });
-
 
     //评论表单验证
     $('.ui.form').form({
