--- a/src/main/resources/templates/theme/default/error/500.html
+++ b/src/main/resources/templates/theme/default/error/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{_fragments :: head(~{::title})}">
+<head th:replace="~{theme/default/_fragments :: head(~{::title})}">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>500</title>
@@ -11,8 +11,7 @@
 <body>
 
 <!--导航-->
-<!--<nav th:replace="_fragments :: menu(0)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >-->
-<nav th:replace="~{_fragments :: menu(0)}" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+<nav th:replace="~{theme/default/_fragments :: menu(0)}" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
   <div class="ui container">
     <div class="ui inverted secondary stackable menu">
       <h2 class="ui teal header item">Blog</h2>
@@ -52,8 +51,7 @@
 <br>
 
 
-<!--<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">-->
-<footer th:replace="~{_fragments :: footer}" class="ui inverted vertical segment m-padded-tb-massive">
+<footer th:replace="~{theme/default/_fragments :: footer}" class="ui inverted vertical segment m-padded-tb-massive">
   <div class="ui center aligned container">
     <div class="ui inverted divided stackable grid">
       <div class="three wide column">
