--- a/src/main/resources/templates/theme/default/error/error.html
+++ b/src/main/resources/templates/theme/default/error/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{_fragments :: head(~{::title})}">
+<head th:replace="~{theme/default/_fragments :: head(~{::title})}">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>错误</title>
@@ -11,7 +11,7 @@
 <body>
 
 <!--导航-->
-<nav th:replace="_fragments :: menu(0)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+<nav th:replace="~{theme/default/_fragments :: menu(0)}" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
   <div class="ui container">
     <div class="ui inverted secondary stackable menu">
       <h2 class="ui teal header item">Blog</h2>
@@ -58,40 +58,8 @@
   <div th:utext="'Exception message : ' + ${Exception}"  ></div>
   <div th:utext="'--&gt;'"  ></div>
 </div>
-<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
-  <div class="ui center aligned container">
-    <div class="ui inverted divided stackable grid">
-      <div class="three wide column">
-        <div class="ui inverted link list">
-          <div class="item">
-            <img src="../../../../static/default/images/wechat.jpg" th:src="@{/default/images/wechat.jpg}" class="ui rounded image" alt="" style="width: 110px">
-          </div>
-        </div>
-      </div>
-      <div class="three wide column">
-        <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
-        <div class="ui inverted link list">
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-        </div>
-      </div>
-      <div class="three wide column">
-        <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
-        <div class="ui inverted link list">
-          <a href="#" class="item m-text-thin">Email：xsh2668028614@qq.com</a>
-          <a href="#" class="item m-text-thin">QQ：2668028614</a>
-        </div>
-      </div>
-      <div class="seven wide column">
-        <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-        <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、记录学习进度和关于编程、写作、思考相关的任何内容...</p>
-      </div>
-    </div>
-    <div class="ui inverted section divider"></div>
-    <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017 Xiong_sh Designed by Xiong_sh</p>
-  </div>
 
+<footer th:replace="~{theme/default/_fragments :: footer}" class="ui inverted vertical segment m-padded-tb-massive">
 </footer>
 
 </body>
