--- a/src/main/resources/templates/theme/default/githubInfo.html
+++ b/src/main/resources/templates/theme/default/githubInfo.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!--<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">-->
 <html  lang="zh" xmlns:th="http://www.thymeleaf.org">
 
-<head  th:replace="theme/default/_fragments :: head(~{::title})">
+<head  th:replace="~{theme/default/_fragments :: head(~{::title})}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github资料信息</title>
-    <link rel="stylesheet" href="../../../static/default/css/semantic.min.css" th:href="@{/css/semantic.min.css}">
-    <link rel="stylesheet" href="../../../static/default/css/me.css" th:href="@{/css/me.css}">
+    <link rel="stylesheet" href="../../../static/default/css/semantic.min.css" th:href="@{default/css/semantic.min.css}">
+    <link rel="stylesheet" href="../../../static/default/css/me.css" th:href="@{default/css/me.css}">
     <style>
         .myHideStyle{
             display: none !important;
@@ -17,12 +16,13 @@
         }
     </style>
 </head>
-<link rel="stylesheet" href="../../../static/default/css/dropzone.min.css" th:href="@{/css/dropzone.min.css}"/>
-<link rel="stylesheet" href="../../../static/default/css/basic.min.css" th:href="@{/css/basic.min.css}"/>
-<link rel="stylesheet" href="../../../static/default/css/file_window.css" th:href="@{/css/file_window.css}"/>
+<link rel="stylesheet" href="../../../static/default/css/dropzone.min.css" th:href="@{default/css/dropzone.min.css}"/>
+<link rel="stylesheet" href="../../../static/default/css/basic.min.css" th:href="@{default/css/basic.min.css}"/>
+<link rel="stylesheet" href="../../../static/default/css/file_window.css" th:href="@{default/css/file_window.css}"/>
 
-<script src="/js/dropzone.min.js"></script>
+<script src="default/js/dropzone.min.js"></script>
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+
 <body>
 <!--自定义弹窗:上传头像窗口-->
 <div class="widget widget1"  id="window" hidden="hidden">
@@ -190,42 +190,11 @@
 
 <br>
 <br>
-<!--底部footer-->
-<footer th:replace="theme/default/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
-    <div class="ui center aligned container">
-        <div class="ui inverted divided stackable grid">
-            <div class="three wide column">
-                <div class="ui inverted link list">
-                    <div class="item">
-                        <img src="../../../static/default/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
-                    </div>
-                </div>
-            </div>
-            <div class="three wide column">
-                <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
-                <div class="ui inverted link list">
-                    <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-                    <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-                    <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-                </div>
-            </div>
-            <div class="three wide column">
-                <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
-                <div class="ui inverted link list">
-                    <a href="#" class="item m-text-thin">Email：xsh2668028614@qq.com</a>
-                    <a href="#" class="item m-text-thin">QQ：2668028614</a>
-                </div>
-            </div>
-            <div class="seven wide column">
-                <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-                <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、记录学习进度和关于编程、写作、思考相关的任何内容...</p>
-            </div>
-        </div>
-        <div class="ui inverted section divider"></div>
-        <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2016 - 2017 Xiong_sh Designed by Xiong_sh</p>
-    </div>
 
+<!--底部footer-->
+<footer th:replace="~{theme/default/_fragments :: footer}" class="ui inverted vertical segment m-padded-tb-massive">
 </footer>
+
 <!--/*/<th:block th:replace="_fragments :: script">/*/-->
 <script src="../../static/js/jquery.js" th:src="@{/default/js/jquery.js}"></script>
 <script src="../../../static/default/js/semantic.min.js" th:src="@{/default/js/semantic.min.js}"></script>
