--- a/src/main/resources/templates/theme/default/_fragments.html
+++ b/src/main/resources/templates/theme/default/_fragments.html
@@ -141,7 +141,7 @@
     <div style="width:300px;margin:0 auto; padding:1px 0; ">
       <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36098102000147"
          style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
-        <img src="../../../static/default/images/1.png" style="float:left;" alt=""/>
+        <img src="default/images/1.png" style="float:left;" alt=""/>
         <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#ff1c04;">粤公网安备 6666666666666666号</p>
       </a>
     </div>
