--- a/src/main/resources/templates/theme/default/_fragments.html
+++ b/src/main/resources/templates/theme/default/_fragments.html
@@ -91,77 +91,101 @@
 <!--底部footer-->
 <footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive">
   <!--引入网易云音乐播放器插件，固定右下角显示,歌单4864025307-->
-<!--
-  <div id="netEasy-music" style="display:none;position: fixed;bottom: -45px;right: 280px;width: 0%;z-index:9999" >
-    <iframe frameborder="no" border="0" marginwidth="0"
-            marginheight="0" width=280 height=300
-            src="http://music.163.com/outchain/player?type=0&id=4864025307&auto=0">
-    </iframe>
-    &lt;!&ndash;引入天气预报插件&ndash;&gt;
-    &lt;!&ndash;https://cj.weather.com.cn/plugin/pc&ndash;&gt;
-    <div id="weather-float-he"></div>
-  </div>
--->
+  <!--
+    <div id="netEasy-music" style="display:none;position: fixed;bottom: -45px;right: 280px;width: 0%;z-index:9999" >
+      <iframe frameborder="no" border="0" marginwidth="0"
+              marginheight="0" width=280 height=300
+              src="http://music.163.com/outchain/player?type=0&id=4864025307&auto=0">
+      </iframe>
+      &lt;!&ndash;引入天气预报插件&ndash;&gt;
+      &lt;!&ndash;https://cj.weather.com.cn/plugin/pc&ndash;&gt;
+      <div id="weather-float-he"></div>
+    </div>
+  -->
   <div id="weather-float-he"></div>
   <div class="ui center aligned container">
+
     <div class="ui inverted divided stackable grid">
       <div class="three wide column">
         <div class="ui inverted link list">
           <div class="item">
-<!--            <img src="http://cdn.xiongsihao.com/footer_image.jpeg" class="ui rounded image" alt="" style="width: 110px">-->
-<!--            <img src="../../../static/default/favicon.ico" th:src="@{/default/favicon.ico}" class="ui rounded image" alt="" style="width: 110px">-->
-            <img src="https://source.unsplash.com/random/400x400" th:src="@{/default/favicon.ico}" class="ui rounded image" alt="" style="width: 110px">
+            <!--            <img src="http://cdn.xiongsihao.com/footer_image.jpeg" class="ui rounded image" alt="" style="width: 110px">-->
+            <!--            <img src="../../../static/default/favicon.ico" th:src="@{/default/favicon.ico}" class="ui rounded image" alt="" style="width: 110px">-->
+            <img src="https://source.unsplash.com/random/400x400" th:src="@{/default/favicon.ico}"
+                 class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
-      <div class="three wide column" >
-        <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
+      <div class="three wide column">
+        <h4 class="ui inverted header m-text-thin m-text-spaced ">最新博客</h4>
         <div id="newblog-container">
           <div class="ui inverted link list" th:fragment="newblogList">
-            <a href="#" th:href="@{/article/md/{id}(id=${blog.articleId})}" target="_blank" class="item m-text-thin" th:each="blog : ${newblogs}" th:text="${blog.title}">用户故事（User Story）</a>
+            <a href="#" th:href="@{/article/md/{id}(id=${blog.articleId})}" target="_blank" class="item m-text-thin"
+               th:each="blog : ${newblogs}" th:text="${blog.title}">用户故事（User Story）</a>
           </div>
         </div>
       </div>
       <div class="three wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
         <div class="ui inverted link list">
-          <p class="m-text-thin m-text-spaced m-opacity-tiny" >Email：<a href="#" class="item m-text-thin" th:text="${configurations.get('email')}">Email：123456@qq.com</a></p>
-<!--          <p class="m-text-thin m-text-spaced m-opacity-tiny" >QQ：<a href="#" class="item m-text-thin" th:text="${configurations.get('qq')}">QQ：123456</a></p>-->
+          <p class="m-text-thin m-text-spaced m-opacity-tiny">Email：<a href="#" class="item m-text-thin"
+                                                                       th:text="${configurations.get('email')}">Email：123456@qq.com</a>
+          </p>
+          <!--          <p class="m-text-thin m-text-spaced m-opacity-tiny" >QQ：<a href="#" class="item m-text-thin" th:text="${configurations.get('qq')}">QQ：123456</a></p>-->
         </div>
       </div>
       <div class="seven wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-        <p class="m-text-thin m-text-spaced m-opacity-mini" th:text="${configurations.get('websiteDescription')}">这是我的个人博客、记录学习进度和关于编程、写作、思考相关的任何内容...</p>
+        <p class="m-text-thin m-text-spaced m-opacity-mini" th:text="${configurations.get('websiteDescription')}">
+          这是我的个人博客、记录学习进度和关于编程、写作、思考相关的任何内容...</p>
       </div>
     </div>
+
     <div class="ui inverted section divider"></div>
-    <p class="m-text-thin m-text-spaced m-opacity-tiny" >Copyright © 2019 - <span th:text="${#dates.year(#dates.createNow())}">2020</span>&nbsp;Java-Markdown-Blog&nbsp;Designed by wulilinghan</p>
-    <p class="m-text-thin m-text-spaced m-opacity-tiny" ><a href="http://icp.chinaz.com/info?q=xiongsihao.com">粤AAABBBBCCCC</a></p>
+    <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2019 - <span
+            th:text="${#dates.year(#dates.createNow())}">2020</span>&nbsp;Java-Markdown-Blog&nbsp;Designed by
+      wulilinghan</p>
+    <p class="m-text-thin m-text-spaced m-opacity-tiny"><a href="http://icp.chinaz.com/info?q=xiongsihao.com">粤AAABBBBCCCC</a>
+    </p>
 
     <div style="width:300px;margin:0 auto; padding:1px 0; ">
       <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36098102000147"
          style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
         <img src="default/images/1.png" style="float:left;" alt=""/>
-        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#ff1c04;">粤公网安备 6666666666666666号</p>
+        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#ff1c04;">粤公网安备
+          6666666666666666号</p>
       </a>
     </div>
 
     <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
     <script>
       var now = new Date();
+
       function createtime() {
-        var grt= new Date("11/11/2019 17:38:00");//在此处修改你的建站时间，格式：月/日/年 时:分:秒
-        now.setTime(now.getTime()+250);
-        days = (now - grt ) / 1000 / 60 / 60 / 24; dnum = Math.floor(days);
-        hours = (now - grt ) / 1000 / 60 / 60 - (24 * dnum); hnum = Math.floor(hours);
-        if(String(hnum).length ===1 ){hnum = "0" + hnum;} minutes = (now - grt ) / 1000 /60 - (24 * 60 * dnum) - (60 * hnum);
-        mnum = Math.floor(minutes); if(String(mnum).length ===1 ){mnum = "0" + mnum;}
-        seconds = (now - grt ) / 1000 - (24 * 60 * 60 * dnum) - (60 * 60 * hnum) - (60 * mnum);
-        snum = Math.round(seconds); if(String(snum).length ===1 ){snum = "0" + snum;}
-        document.getElementById("timeDate").innerHTML = "本站已安全运行 "+dnum+" 天 ";
+        var grt = new Date("11/11/2019 17:38:00");//在此处修改你的建站时间，格式：月/日/年 时:分:秒
+        now.setTime(now.getTime() + 250);
+        days = (now - grt) / 1000 / 60 / 60 / 24;
+        dnum = Math.floor(days);
+        hours = (now - grt) / 1000 / 60 / 60 - (24 * dnum);
+        hnum = Math.floor(hours);
+        if (String(hnum).length === 1) {
+          hnum = "0" + hnum;
+        }
+        minutes = (now - grt) / 1000 / 60 - (24 * 60 * dnum) - (60 * hnum);
+        mnum = Math.floor(minutes);
+        if (String(mnum).length === 1) {
+          mnum = "0" + mnum;
+        }
+        seconds = (now - grt) / 1000 - (24 * 60 * 60 * dnum) - (60 * 60 * hnum) - (60 * mnum);
+        snum = Math.round(seconds);
+        if (String(snum).length === 1) {
+          snum = "0" + snum;
+        }
+        document.getElementById("timeDate").innerHTML = "本站已安全运行 " + dnum + " 天 ";
         document.getElementById("times").innerHTML = hnum + " 小时 " + mnum + " 分 " + snum + " 秒";
       }
-      setInterval("createtime()",500);
+
+      setInterval("createtime()", 500);
     </script>
 
   </div>
