--- a/src/main/resources/templates/theme/default/about.html
+++ b/src/main/resources/templates/theme/default/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{theme/default/_fragments :: head(~{::title})})">
+<head th:replace="~{theme/default/_fragments :: head(~{::title})}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于我</title>
