--- a/src/main/resources/templates/theme/default/_fragments.html
+++ b/src/main/resources/templates/theme/default/_fragments.html
@@ -59,11 +59,11 @@
 
       <div class="right m-item m-mobile-hide item" >
          <!-- 导航栏右边登录按钮 -->
-<!--        <div th:classappend="${session.loginStatus}?'myHideStyle':'myShowStyle'">-->
+        <div th:classappend="${session.loginStatus}?'myHideStyle':'myShowStyle'">
 <!--          <a href="#"  th:href="@{/qq/oauth}" style="width:80px; text-align:center"><i class="mini qq icon"></i>QQ登录&nbsp;|</a>-->
-<!--          <a href="#"  th:href="@{/github/oauth}" style="width:80px; text-align:center"><i class="github icon"></i>github登录&nbsp;|</a>-->
+          <a href="#"  th:href="@{/github/oauth}" style="width:80px; text-align:center"><i class="github icon"></i>github登录&nbsp;|</a>
 <!--          <a href="#" target="_blank" th:href="@{/admin}" style="width:80px; text-align:center"><i class="mini user secret icon"></i>&nbsp;后台管理</a>-->
-<!--        </div>-->
+        </div>
 
         <div class="ui dropdown item" th:classappend="${session.loginStatus}?'myShowStyle':'myHideStyle'">
           <div class="text">
