--- a/src/main/resources/templates/theme/default/githubInfo - 副本.html
+++ b/src/main/resources/templates/theme/default/githubInfo - 副本.html
@@ -36,9 +36,58 @@
     </div>
 </div>
 <!--导航-->
-<nav th:replace="~{theme/default/_fragments :: menu(-1)}"
-     class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
-</nav>
+<div class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+    <div class="ui container">
+        <div class="ui inverted secondary stackable menu">
+            <h2 class="ui teal header item" title="个人博客">XSH_Blog</h2>
+            <a href="#" target="_blank" th:href="@{/}" class="m-item item m-mobile-hide " th:classappend="${n==1} ? 'active'"><i class="mini home icon"></i>&nbsp;首页</a>
+            <a href="#" target="_blank" th:href="@{/types/-1}" class="m-item item m-mobile-hide" th:classappend="${n==2} ? 'active'"><i class="mini idea icon"></i>分类</a>
+            <a href="#" target="_blank" th:href="@{/tags/-1}" class="m-item item m-mobile-hide" th:classappend="${n==3} ? 'active'"><i class="mini tags icon"></i>&nbsp;标签</a>
+            <a href="#" target="_blank" th:href="@{/archives}" class="m-item item m-mobile-hide" th:classappend="${n==4} ? 'active'"><i class="mini clone icon"></i>&nbsp;归档</a>
+            <a href="#" target="_blank" th:href="@{/Messages}" class="m-item item m-mobile-hide" th:classappend="${n==5} ? 'active'"><i class="mini envelope outline icon"></i>&nbsp;留言</a>
+            <a href="#" target="_blank" th:href="@{/about}" class="m-item item m-mobile-hide" th:classappend="${n==6} ? 'active'"><i class="mini info icon"></i>关于我</a>
+            <a href="http://music.xiongsihao.com" class="m-item item m-mobile-hide" th:classappend="${n==7} ? 'active'"><i class="mini music icon"></i>&nbsp;在线音乐</a>
+            <a href="http://netdisk.xiongsihao.com" class="m-item item m-mobile-hide" th:classappend="${n==8} ? 'active'"><i class="mini save icon"></i>&nbsp;云盘</a>
+            <!--            <a href="#" target="_blank" th:href="@{/admin}" class="m-item item m-mobile-hide" th:classappend="${n==7} ? 'active'"><i class="mini user secret icon"></i>后台管理</a>-->
+            <div class="right m-item item m-mobile-hide">
+                <form name="search" action="#" th:action="@{/search}" method="post" target="_blank">
+                    <div class="ui icon inverted  input m-margin-tb-tiny">
+                        <input type="text" name="query" placeholder="Search...." th:value="${query}">
+                        <i onclick="document.forms['search'].submit()" class="search link icon"></i>
+                    </div>
+                </form>
+            </div>
+
+            <div class="right m-item m-mobile-hide item" >
+                <div th:classappend="${session.loginStatus}?'myHideStyle':'myShowStyle'">
+                    <a href="#"  th:href="@{/qq/oauth}" style="width:80px; text-align:center"><i class="mini qq icon"></i>QQ登录&nbsp;|</a>
+                    <a href="#"  th:href="@{/github/oauth}" style="width:80px; text-align:center"><i class="github icon"></i>github登录&nbsp;|</a>
+                    <a href="#" target="_blank" th:href="@{/templates/admin}" style="width:80px; text-align:center"><i class="mini user secret icon"></i>&nbsp;后台管理</a>
+                </div>
+
+                <div class="ui dropdown item" th:classappend="${session.loginStatus}?'myShowStyle':'myHideStyle'">
+                    <div class="text">
+                        <img class="ui avatar image" th:src="${session.avatar}">
+                        <span th:text="${session.nickname}">Xiong_sh</span>
+                    </div>
+                    <i class="dropdown icon"></i>
+                    <div class="menu" th:if="${session.loginType == 1}">
+                        <a href="#" th:href="@{/qqinfo}" class="item">QQ资料</a>
+                        <a href="#" th:href="@{/qqlogout}" class="item">退出登录</a>
+                    </div>
+                    <div class="menu" th:if="${session.loginType == 2}">
+                        <a href="#" th:href="@{/githubInfo}" class="item">Github资料</a>
+                        <a href="#" th:href="@{/githublogout}" class="item">退出登录</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
+        <i class="sidebar icon"></i>
+    </a>
+</div>
 
 <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 
