feat: 标签功能以及细节优化

--- a/src/main/resources/templates/theme/default/about.html
+++ b/src/main/resources/templates/theme/default/about.html
@@ -22,8 +22,8 @@
         <div class="ui stackable grid">
             <div class="eleven wide column">
                 <div class="ui segment">
-                    <img style="margin: 0 auto;" src="default/favicon.ico" alt=""
-                         class="ui rounded image ">
+<!--                    <img style="margin: 0 auto;" src="default/favicon.ico" alt="" class="ui rounded image ">-->
+                    <img style="margin: 0 auto;" src="https://source.unsplash.com/random/1270x720" alt="" class="ui rounded image ">
                 </div>
             </div>
             <div class="five wide column">
@@ -31,8 +31,8 @@
                     <div class="ui header">关于我</div>
                 </div>
                 <div class="ui attached segment">
-                    <p class="m-text">全栈才能生存</p>
-                    <p class="m-text">blog 记录....</p>
+                    <p class="m-text">随便记录下</p>
+<!--                    <p class="m-text">blog 记录....</p>-->
                 </div>
                 <div class="ui attached segment">
                     <div class="ui orange basic left pointing label">编程</div>
@@ -41,20 +41,22 @@
                 </div>
                 <div class="ui attached segment">
                     <div class="ui teal basic left pointing label m-margin-tb-tiny">Java</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">JavaScript</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">Node</div>
                     <div class="ui teal basic left pointing label m-margin-tb-tiny">Spring</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">redis</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">MYSQL</div>
+                    <div class="ui teal basic left pointing label m-margin-tb-tiny">MySQL</div>
+                    <div class="ui teal basic left pointing label m-margin-tb-tiny">Golang</div>
                     <div class="ui teal basic left pointing label m-margin-tb-tiny">...</div>
                 </div>
                 <div class="ui bottom attached segment">
-                    <a href="#" class="ui github circular icon button" data-content="https://github.com/wulilinghan"
-                       data-position="bottom center"><i class="github icon"></i></a>
-                    <a href="#" class="ui wechat circular icon button" data-content="wulilinghan"
-                       data-position="bottom center"><i class="weixin icon"></i></a>
-                    <a href="#" class="ui qq circular icon button" data-content="1902325071"
-                       data-position="bottom center"><i class="qq icon"></i></a>
+                    <a href="https://github.com/wulilinghan" class="ui github circular icon button" target="_blank" data-content="https://github.com/wulilinghan" data-position="bottom center">
+                        <i class="github icon"></i>
+                    </a>
+<!--                    <a href="#" class="ui wechat circular icon button" data-content="wulilinghan" data-position="bottom center"><i class="weixin icon"></i></a>-->
+                    <a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=1902325071&website=www.oicqzone.com" target="_blank" class="ui qq circular icon button" data-content="1902325071" data-position="bottom center">
+                        <i class="qq icon"></i>
+                    </a>
+                    <a href="https://twitter.com/isvling" target="_blank" class="ui qq circular icon button" data-content="@isvling" data-position="bottom center">
+                        <i class="twitter icon"></i>
+                    </a>
                 </div>
 
                 <div class="ui wechat-qr flowing popup transition hidden">
