--- a/src/main/resources/templates/theme/default/_fragments.html
+++ b/src/main/resources/templates/theme/default/_fragments.html
@@ -61,7 +61,8 @@
          <!-- 导航栏右边登录按钮 -->
         <div th:classappend="${session.loginStatus}?'myHideStyle':'myShowStyle'">
 <!--          <a href="#"  th:href="@{/qq/oauth}" style="width:80px; text-align:center"><i class="mini qq icon"></i>QQ登录&nbsp;|</a>-->
-          <a href="#"  th:href="@{/github/oauth}" style="width:80px; text-align:center"><i class="github icon"></i>github登录&nbsp;|</a>
+<!--          <a href="#"  th:href="@{/github/oauth}" style="width:80px; text-align:center"><i class="github icon"></i>github登录&nbsp;|</a>-->
+          <a href="#"  th:href="@{/github/oauth}" style="width:80px; text-align:center"><i class="github icon"></i>github登录&nbsp;</a>
 <!--          <a href="#" target="_blank" th:href="@{/admin}" style="width:80px; text-align:center"><i class="mini user secret icon"></i>&nbsp;后台管理</a>-->
         </div>
 
@@ -90,72 +91,27 @@
 
 <!--底部footer-->
 <footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive">
-  <!--引入网易云音乐播放器插件，固定右下角显示,歌单4864025307-->
-  <!--
-    <div id="netEasy-music" style="display:none;position: fixed;bottom: -45px;right: 280px;width: 0%;z-index:9999" >
-      <iframe frameborder="no" border="0" marginwidth="0"
-              marginheight="0" width=280 height=300
-              src="http://music.163.com/outchain/player?type=0&id=4864025307&auto=0">
-      </iframe>
-      &lt;!&ndash;引入天气预报插件&ndash;&gt;
-      &lt;!&ndash;https://cj.weather.com.cn/plugin/pc&ndash;&gt;
-      <div id="weather-float-he"></div>
-    </div>
-  -->
-  <div id="weather-float-he"></div>
+  <!--引入网易云音乐播放器插件，固定右下角显示,歌单 2920779395 换成自己的， auto值取0，关闭自动播放-->
+  <div id="netEasy-music" style="display:none;position: fixed;bottom: -45px;right: 280px;width: 0%;z-index:9999" >
+    <iframe frameborder="no" border="0" marginwidth="0"
+            marginheight="0" width=280 height=300
+            src="http://music.163.com/outchain/player?type=0&id=2920779395&auto=0">
+    </iframe>
+  </div>
+
   <div class="ui center aligned container">
-
-    <div class="ui inverted divided stackable grid">
-      <div class="three wide column">
-        <div class="ui inverted link list">
-          <div class="item">
-            <!--            <img src="http://cdn.xiongsihao.com/footer_image.jpeg" class="ui rounded image" alt="" style="width: 110px">-->
-            <!--            <img src="../../../static/default/favicon.ico" th:src="@{/default/favicon.ico}" class="ui rounded image" alt="" style="width: 110px">-->
-            <img src="https://source.unsplash.com/random/400x400" th:src="@{/default/favicon.ico}"
-                 class="ui rounded image" alt="" style="width: 110px">
-          </div>
-        </div>
-      </div>
-      <div class="three wide column">
-        <h4 class="ui inverted header m-text-thin m-text-spaced ">最新博客</h4>
-        <div id="newblog-container">
-          <div class="ui inverted link list" th:fragment="newblogList">
-            <a href="#" th:href="@{/article/md/{id}(id=${blog.articleId})}" target="_blank" class="item m-text-thin"
-               th:each="blog : ${newblogs}" th:text="${blog.title}">用户故事（User Story）</a>
-          </div>
-        </div>
-      </div>
-      <div class="three wide column">
-        <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
-        <div class="ui inverted link list">
-          <p class="m-text-thin m-text-spaced m-opacity-tiny">Email：<a href="#" class="item m-text-thin"
-                                                                       th:text="${configurations.get('email')}">Email：123456@qq.com</a>
-          </p>
-          <!--          <p class="m-text-thin m-text-spaced m-opacity-tiny" >QQ：<a href="#" class="item m-text-thin" th:text="${configurations.get('qq')}">QQ：123456</a></p>-->
-        </div>
-      </div>
-      <div class="seven wide column">
-        <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-        <p class="m-text-thin m-text-spaced m-opacity-mini" th:text="${configurations.get('websiteDescription')}">
-          这是我的个人博客、记录学习进度和关于编程、写作、思考相关的任何内容...</p>
-      </div>
-    </div>
-
-    <div class="ui inverted section divider"></div>
-    <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2019 - <span
-            th:text="${#dates.year(#dates.createNow())}">2020</span>&nbsp;Java-Markdown-Blog&nbsp;Designed by
-      wulilinghan</p>
-    <p class="m-text-thin m-text-spaced m-opacity-tiny"><a href="http://icp.chinaz.com/info?q=xiongsihao.com">粤AAABBBBCCCC</a>
+    <p class="m-text-thin m-text-spaced m-opacity-tiny">
+      Copyright © 2019 -<span th:text="${#dates.year(#dates.createNow())}">2020</span>&nbsp;wulilinghan
     </p>
 
-    <div style="width:300px;margin:0 auto; padding:1px 0; ">
+    <!-- 备案号 -->
+<!--    <div style="width:300px;margin:0 auto; padding:1px 0; ">
       <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36098102000147"
          style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
         <img src="default/images/1.png" style="float:left;" alt=""/>
-        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#ff1c04;">粤公网安备
-          6666666666666666号</p>
+        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#ff1c04;">粤公网安备 6666666666666666号</p>
       </a>
-    </div>
+    </div>-->
 
     <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
     <script>
@@ -195,6 +151,7 @@
 <th:block th:fragment="script">
   <!--data-fixed歌词是否居中显示， data-id网易云歌单id,data-order为random表示随机播放列表音乐,data-autoplay是否自动播放,data-volume默认音量-->
   <div id="player" class="aplayer aplayer-withlist aplayer-fixed" data-id="3778678" data-server="netease" data-autoplay="true" data-type="playlist"  data-fixed="true" data-volume="0.6" data-listfolded="true" data-theme="#2D8CF0"></div>
+
   <script src="../../../static/default/js/APlayer.min.js" th:src="@{/default/js/APlayer.min.js}"></script>
   <script src="../../../static/default/js/Meting.min.js" th:src="@{/default/js/Meting.min.js}"></script>
   <script src="../../../static/default/js/jquery.js" th:src="@{/default/js/jquery.js}"></script>
@@ -206,17 +163,13 @@
   <script src="../../../static/default/lib/waypoints/jquery.waypoints.min.js" th:src="@{/default/lib/waypoints/jquery.waypoints.min.js}"></script>
   <script src="../../../static/default/js/jquery.emoji.js" th:src="@{/default/js/jquery.emoji.js}"></script>
   <script src="../../../static/default/js/emoji.list.js" th:src="@{/default/js/emoji.list.js}"></script>
-  <script>
-    $('#newblog-container').load(
-            //[[@{/footer/newblog}]]
-     //"/footer/newblog"
-    );
-  </script>
+
   <script>
     $('.ui.dropdown').dropdown({
       on: 'hover'
     });
   </script>
+
   <!--适配移动端和电脑端-->
   <script type="text/javascript">
     var browser = {
@@ -241,60 +194,45 @@
       //执行移动端的相关代码
       //alert("移动端");
       //设置移动端不显示网易云音乐插件
-/*      onload = function () {
+      onload = function () {
           var MusicDivShow = document.getElementById('netEasy-music');//获取指定div中的元素
           MusicDivShow.style.display = 'none';//控制层隐藏
-      };*/
+      };
     }else if(!browser.versions.mobile){ //非移动端，动态加载js和div
       //设置电脑端显示网易云音乐插件
       onload = function () {
-        /*var MusicDivShow = document.getElementById('netEasy-music');//获取指定div中的元素
-        MusicDivShow.style.display = 'block';//控制层显示*/
+        var MusicDivShow = document.getElementById('netEasy-music');//获取指定div中的元素
+        MusicDivShow.style.display = 'block';//控制层显示
       };
-      var script1 = document.createElement('script');
-      script1.type = 'text/javascript';
-      script1.src = '\\js\\snow.js';
+      var snowScript = document.createElement('script');
+      snowScript.type = 'text/javascript';
+      snowScript.src = '\\default\\js\\snow.js';
 
-      <!-- 天气预报 -->
-      WIDGET = {FID: 'EtgqPWMbdv'}
-      var script4 = document.createElement('script');
-      script4.type = 'text/javascript';
-      script4.src = 'https://apip.weatherdt.com/float/static/js/r.js?v=1111';
+      var clickShowTextScript = document.createElement('script');
+      clickShowTextScript.type = 'text/javascript';
+      clickShowTextScript.src = '\\default\\js\\click_show_text.js';
 
-      var script2 = document.createElement('script');
-      script2.type = 'text/javascript';
-      script2.src = '\\js\\click_show_text.js';
-
-      var script3 = document.createElement('script');
-      script3.type = 'text/javascript';
-      script3.color = '220,220,220';
-      script3.opacity = '0.7';//透明度
-      script3.zIndex = '-2';
-      script3.count = '200';
-      script3.src = '//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js';
+      var canvasNestScript = document.createElement('script');
+      canvasNestScript.type = 'text/javascript';
+      canvasNestScript.color = '220,220,220';
+      canvasNestScript.opacity = '0.7';//透明度
+      canvasNestScript.zIndex = '-2';
+      canvasNestScript.count = '200';
+      canvasNestScript.src = '//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js';
 
       /*live-2D*/
-      var script5 = document.createElement('script');
-      script5.type = 'text/javascript';
-      script5.src = '\\js\\autoload.js';
+      var live2DScript = document.createElement('script');
+      live2DScript.type = 'text/javascript';
+      live2DScript.src = '\\default\\js\\autoload.js';
 
+      <!--博客美化效果-->
       var $body = $('body');
-      // $body.append(script1);//雪花效果
-      // $body.append(script2);//弹出字幕
-      $body.append(script3);
-      //$body.append(script4);
-      // $body.append(script5);// live-2D （看板娘）
+      // $body.append(snowScript);//雪花特效
+      // $body.append(clickShowTextScript);//单击弹出文字
+      // $body.append(canvasNestScript); //网页动态线条背景效果，背景上会有动态的线组合成三角形等各种图形，并且会对用户鼠标移动作出响应
+      $body.append(live2DScript);// live-2D （看板娘）
     }
   </script>
-  <!--博客美化效果-->
-  <!--单击显示文字-->
-<!--  <script type="text/javascript" src="/js/click_show_text.js"></script>-->
-  <!--动态线条背景-->
-<!--  <script type="text/javascript"
-          color="220,220,220" opacity='0.7' zIndex="-2" count="200" src="//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js">
-  </script>-->
-  <!-- 雪花特效 -->
-  <!--<script type="text/javascript" src="\js\snow.js"></script>-->
 </th:block>
 </body>
 </html>
