--- a/src/main/resources/templates/theme/default/blog.html
+++ b/src/main/resources/templates/theme/default/blog.html
@@ -120,7 +120,8 @@
                         <h3 class="ui dividing header">评论</h3>
                         <div class="comment" th:each="comment : ${comments}">
                             <a class="avatar">
-                                <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}">
+<!--                                <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}">-->
+                                <img src="default/images/avatar.png" alt=""/>
                             </a>
                             <div class="content">
                                 <a class="author">
@@ -150,7 +151,8 @@
                             <div class="comments" th:if="${#arrays.length(comment.replyComments)}>0">
                                 <div class="comment" th:each="reply : ${comment.replyComments}">
                                     <a class="avatar">
-                                        <img src="https://unsplash.it/100/100?image=1005" th:src="@{${reply.avatar}}">
+<!--                                        <img src="https://unsplash.it/100/100?image=1005" th:src="@{${reply.avatar}}">-->
+                                        <img src="default/images/avatar.png" alt=""/>
                                     </a>
                                     <div class="content">
                                         <a class="author">
@@ -180,62 +182,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!--/*-->
-                        <div class="comment">
-                            <a class="avatar">
-                                <img src="https://unsplash.it/100/100?image=1005">
-                            </a>
-                            <div class="content">
-                                <a class="author">Elliot Fu</a>
-                                <div class="metadata">
-                                    <span class="date">Yesterday at 12:30AM</span>
-                                </div>
-                                <div class="text">
-                                    <p>This has been very useful for my research. Thanks as well!</p>
-                                </div>
-                                <div class="actions">
-                                    <a class="reply">回复</a>
-                                </div>
-                            </div>
-                            <div class="comments">
-                                <div class="comment">
-                                    <a class="avatar">
-                                        <img src="https://unsplash.it/100/100?image=1005">
-                                    </a>
-                                    <div class="content">
-                                        <a class="author">Jenny Hess</a>
-                                        <div class="metadata">
-                                            <span class="date">Just now</span>
-                                        </div>
-                                        <div class="text">
-                                            Elliot you are always so right :)
-                                        </div>
-                                        <div class="actions">
-                                            <a class="reply">回复</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="comment">
-                            <a class="avatar">
-                                <img src="https://unsplash.it/100/100?image=1005">
-                            </a>
-                            <div class="content">
-                                <a class="author">Joe Henderson</a>
-                                <div class="metadata">
-                                    <span class="date">5 days ago</span>
-                                </div>
-                                <div class="text">
-                                    Dude, this is awesome. Thanks so much
-                                </div>
-                                <div class="actions">
-                                    <a class="reply">回复</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!--*/-->
-
                     </div>
                 </div>
             </div>
@@ -249,11 +195,11 @@
 
                 <div class="fields">
                     <!--表情按钮-->
-                    <div class="field  m-margin-bottom-small m-mobile-wide" data-tooltip="表情未加载完全或点击无响应可刷新页面重试">
+<!--                    <div class="field  m-margin-bottom-small m-mobile-wide" data-tooltip="表情未加载完全或点击无响应可刷新页面重试">
                         <button id="emojiBtn" type="button" class="ui yellow button m-mobile-wide"><i
                                 class="large smile outline icon"></i>表情
                         </button>
-                    </div>
+                    </div>-->
 
                     <div class="field m-mobile-wide m-margin-bottom-small">
                         <div class="ui left icon input">
@@ -285,7 +231,7 @@
 <div id="toolbar" class="m-padded m-fixed m-right-bottom" style="display: none;">
     <div class="ui vertical icon buttons ">
         <button type="button" class="ui toc teal button">目录</button>
-<!--        <a href="#comment-container" class="ui teal button" th:if="${blog.meta.commentabled}">留言</a>-->
+        <a href="#comment-container" class="ui teal button" th:if="${blog.meta.commentabled}">留言</a>
         <a href="#comment-container" class="ui teal button">留言</a>
         <button type="button" class="ui share teal button">分享</button>
         <!--<button class="ui wechat icon button"><i class="weixin icon"></i></button>-->
@@ -330,19 +276,11 @@
 
 <th:block th:replace="~{theme/default/_fragments :: script}"/>
 
-<!--  <script src="../static/js/jquery.js" th:src="@{/default/js/jquery.js}"></script>-->
-<!--  <script src="../static/js/semantic.min.js" th:src="@{/default/js/semantic.min.js}"></script>-->
-<!--  <script src="../static/js/jquery.scrollTo.min.js" th:src="@{/default/js/jquery.scrollTo.min.js}"></script>-->
-<!--  <script src="../static/lib/prism/prism.js" th:src="@{/default/lib/prism/prism.js}"></script>-->
-<!--  <script src="../static/lib/tocbot/tocbot.min.js" th:src="@{/default/lib/tocbot/tocbot.min.js}"></script>-->
-<!--  <script src="../static/lib/qrcode/qrcode.min.js" th:src="@{/default/lib/qrcode/qrcode.min.js}"></script>-->
-<!--  <script src="../static/lib/waypoints/jquery.waypoints.min.js" th:src="@{/default/lib/waypoints/jquery.waypoints.min.js}"></script>-->
-<!--  <script src="../static/js/jquery.emoji.js"></script>-->
-<!--  <script src="../static/js/emoji.list.js"></script>-->
-<!--  <script src="http://connect.qq.com/widget/loader/loader.js" widget="shareqq" charset="utf-8"></script>-->
-<!--  -->
 <script>
-    $('#newblog-container').load(/*[[@{/footer/newblog}]]*/"/footer/newblog");
+    $('#newblog-container').load(
+        /*[[@{/footer/newblog}]]*/
+        // "/footer/newblog"
+    );
 </script>
 <script>
     $('.ui.dropdown').dropdown({
@@ -357,12 +295,12 @@
             button: "#emojiBtn",  //评论表情
             showTab: false,
             animation: 'slide',
-            basePath: '/images/emoji',
+            basePath: '/default/images/emoji',
             icons: emojiLists
         });
 
         $("#commentText").emojiParse({
-            basePath: '/images/emoji',
+            basePath: '/default/images/emoji',
             icons: emojiLists
         });
 
@@ -408,8 +346,7 @@
     });
 
     //[[#{blog.serurl}]]
-    //var serurl = "127.0.0.1:8080";  //博客页面右下角二维码网址
-    var serurl = "http://www.xiongsihao.com";
+    var serurl = blog_root_url;  //博客页面右下角二维码网址
     // [[@{/blog/{id}(id=${blog.id})}]]
     var url = "";
     var qrcode = new QRCode("qrcode", {
@@ -470,7 +407,8 @@
     $(function () {
         $("#comment-container").load(
             //[[@{/comments/{id}(id=${blog.id})}]]
-            "comments/6");
+            // "comments/6"
+        );
     });
 
 
@@ -485,8 +423,8 @@
 
     });
 
-    function postData() {
-        $("#comment-container").load(/*[[@{/comments}]]*/"", {
+/*    function postData() {
+        $("#comment-container").load("/POSTComments", {
             "parentComment.id": $("[name='parentComment.id']").val(),
             "blog.id": $("[name='blog.id']").val(),
             "nickname": $("[name='nickname']").val(),
@@ -496,6 +434,36 @@
         }, function (responseTxt, statusTxt, xhr) {
 //        $(window).scrollTo($('#comment-container'),500);
             clearContent();
+            $("#comment-container").load("/refreshComments");//刷新数据
+        });
+    }*/
+
+    function postData() {
+        $.ajax({
+            cache: true,//保留缓存数据
+            type: "POST",
+            url: "/POSTComments",
+            headers: {
+                'x-source': "message-commentPost"
+            },
+            data: {
+                "parentCommentId": $("[name='parentComment.id']").val(),
+                //"openid" : $("[name='openidValue']").val(),
+                "articleMetaData.articleId": $("[name='blog.id']").val(),
+                "nickname": $("[name='nickname']").val(),
+                "email": $("[name='email']").val(),
+                "content": document.getElementById("commentEditor").innerHTML,
+                "replyInform": $("[name='open-mail']").hasClass("checked") ? true : false
+            },
+            async: true,//异步
+            error: function (request) {
+                alert(JSON.stringify(request.responseJSON));
+                console.log(JSON.stringify(request.responseJSON.message));
+            },
+            success: function (data) {
+                clearContent();
+                $("#comment-container").load("/refreshComments");//刷新数据
+            }
         });
     }
 
@@ -519,13 +487,13 @@
     /*QQ分享*/
     function shareQQ() {
         var param = {
-            url: 'http://xiongsihao.com/blog/' + localStorage.getItem("blogId"),
+            url: action_article + localStorage.getItem("blogId"),
             desc: '博客很好很详细，值得一看!',
-            title: localStorage.getItem("blogTitle") + "  from XSH_博客",
+            title: localStorage.getItem("blogTitle") + "  from wulilinghan_Blog",
             summary: '我分享了一篇博客，快来看吧！',
             pics: localStorage.getItem("blogFirstPicture"),
             sharesource: 'qq',
-            site: 'XSH_Blog'
+            site: 'wulilinghan_Blog'
         };
         var s = [];
         for (var i in param) {
@@ -540,7 +508,7 @@
     /*分享QQ空间*/
     function shareQQZone() {
         var param = {
-            url: 'http://xiongsihao.com/blog/' + localStorage.getItem("blogId"),
+            url: action_article + localStorage.getItem("blogId"),
             sharesource: 'qzone',
             title: localStorage.getItem("blogTitle"),
             summary: '我分享了一篇博客，快来看吧！',
