--- a/src/main/resources/templates/theme/default/tags.html
+++ b/src/main/resources/templates/theme/default/tags.html
@@ -52,7 +52,7 @@
 <!--                        <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}" >Xiong_sh</a></div>-->
                         <img src="/default/favicon.ico"  alt="" class="ui avatar image">
                         <div class="content">
-                          <a href="#" class="header" th:text="${configurations.get('name')}" >Xiong_sh</a>
+                          <a href="#" class="header" th:text="${webSiteConfig.getAuthor()}" >wulilinghan</a>
                         </div>
                       </div>
                       <div class="item">
