--- a/src/main/resources/templates/theme/default/blog.html
+++ b/src/main/resources/templates/theme/default/blog.html
@@ -25,10 +25,10 @@
             <div class="ui horizontal link list">
                 <div class="item">
                     <!--            <img src="https://unsplash.it/100/100?image=1005" th:src="@{${blog.user.avatar}}"  alt="" class="ui avatar image">-->
-                    <img src="https://unsplash.it/100/100?image=1005" th:src="${configurations.get('avatar')}" alt=""
+                    <img src="https://unsplash.it/100/100?image=1005" th:src="${webSiteConfig.getAuthor()}" alt=""
                          class="ui avatar image">
                     <div class="content"><a href="#" class="header"
-                                            th:text="${configurations.get('name')}">wulilinghan</a></div>
+                                            th:text="${webSiteConfig.getAuthor()}">wulilinghan</a></div>
                 </div>
                 <div class="item">
                     <i class="calendar icon"></i>
@@ -96,7 +96,7 @@
             <div class="ui middle aligned grid">
                 <div class="eleven wide column">
                     <ui class="list">
-                        <li>作者：<span th:text="${configurations.get('name')}">wulilinghan</span><a href="#"
+                        <li>作者：<span th:text="${webSiteConfig.getAuthor()}">wulilinghan</span><a href="#"
                                                                                                   th:href="@{/about}"
                                                                                                   target="_blank">（联系作者）</a>
                         </li>
@@ -121,7 +121,7 @@
                         <div class="comment" th:each="comment : ${comments}">
                             <a class="avatar">
 <!--                                <img src="https://unsplash.it/100/100?image=1005" th:src="@{${comment.avatar}}">-->
-                                <img src="default/images/avatar.png" alt=""/>
+                                <img src="/default/images/avatar.png" alt=""/>
                             </a>
                             <div class="content">
                                 <a class="author">
@@ -295,6 +295,7 @@
 
 <script th:inline="javascript">
     /*加载emoji表情*/
+/*
     onload = function () {
         $("#commentEditor").emoji({
             button: "#emojiBtn",  //评论表情
@@ -313,6 +314,7 @@
         localStorage.setItem("blogTitle", document.getElementById("blogTitle").value);
         localStorage.setItem("blogId", document.getElementById("blogId").value);
     };
+*/
 
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
