--- a/src/main/resources/templates/theme/default/index.html
+++ b/src/main/resources/templates/theme/default/index.html
@@ -54,10 +54,10 @@
                                         <div class="ui mini horizontal link list">
                                             <div class="item">
                                                 <!-- <img src="https://cn.gravatar.com/userimage/176875695/30e6f4fb8ae8b9eef75989ac24806248.png"-->
-                                                <!-- th:src="@{${configurations.get('avatar')}}" alt="" class="ui avatar image">-->
+                                                <!-- th:src="@{${webSiteConfig.getAuthor()}}" alt="" class="ui avatar image">-->
                                                 <img src="default/favicon.ico" alt="" class="ui avatar image">
                                                 <div class="content">
-                                                    <a href="#" class="header" th:text="${configurations.get('name')}"></a>
+                                                    <a href="#" class="header" th:text="${webSiteConfig.getAuthor()}"></a>
                                                 </div>
                                                 <!-- <div class="content">wuliling</div>-->
                                             </div>
